# staple

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cfg/: staple.cfg
lib/: cmdparser.cpp  cmdparser.h  modelreset.cpp  modelreset.h
res/default_models/: vipgun.mdl
src/: main.cpp
